@@ -3,6 +3,12 @@ Release notes for Agora-Nodes (http://agora.xtec.cat/nodes)
 More information on each of the fixes can be found in the project
 development home at https://github.com/projectestac/agora_nodes
 
+Changes in progress
+---------------------------------------------------------------------------------------
+- Polylang: Added plugin (Trello #1198)
+- bp-moderation: Removed links in BuddyPress index page
+
+
 Changes 17.03.28
 ---------------------------------------------------------------------------------------
 - Upgraded WordPress to version 4.5.7 (Trello #1543)
